# mgf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.org
mgf_demo/: Cargo.toml  balls.rs  capsules.rs  input.rs  world.rs
mgf_demo/resources/: cone.ply
mgf_demo/shaders/: balls_fs.glsl  balls_vs.glsl
src/: bitset.rs  bounds.rs  bvh.rs  collision.rs  compound.rs  geom.rs  lib.rs  manifold.rs  mesh.rs  physics.rs  pool.rs  simplex.rs  solver.rs
