[package]
name = "mgf"
version = "1.3.0"
edition = "2018"
authors = ["Matthew Plant <maplant95@gmail.com>"]
license = "LGPL-3.0"
description = "A 3D collision and physics framework for video games."

documentation = "https://docs.rs/mgf"
homepage = "https://github.com/maplant/mgf"
repository = "https://github.com/maplant/mgf"
readme = "README.md"

keywords = [ "3D", "physics", "collision", "math", "gamedev" ]

[lib]
name = "mgf"

[dependencies]
cgmath = "0.17"
smallvec = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(feature="serde")'.dependencies]
cgmath = { version = "0.17", features = ["serde"] }