[package]
name = "mgf_demo"
version = "0.2.0"
authors = ["Matthew Plant <maplant95@gmail.com>"]

[dependencies]
cgmath = "0.15"
mgf = { path = ".." }
gfx = "0.16"
glutin = "0.10"
gfx_window_glutin = "0.18"
genmesh = "0.5.0"
rand = "*"

[[bin]]
name = "balls"
path = "./balls.rs"

[[bin]]
name = "capsules"
path = "./capsules.rs"